# jobs_scheduler

./: Cargo.toml
jobs_scheduler_client/: Cargo.toml
jobs_scheduler_client/src/: actions.rs  app.rs  events.rs  main.rs  ui.rs
jobs_scheduler_daemon/: Cargo.toml
jobs_scheduler_daemon/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs  parser.rs
